[package]
name = "spangrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
anyhow = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
if_not_else = "allow"
