[package]
name = "spangrep"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0+"
description = "Grep out a spam of lines"
repository = "https://github.com/amandasaurus/spangrep"
homepage = "https://github.com/amandasaurus/spangrep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
anyhow = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
if_not_else = "allow"
